[package]
name = "millegrilles_rpipico"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.1.0" }

cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

# cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
# heapless = { version = "0.8", features = ["serde"] }
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

# Tests pour MilleGrilles

# serde = { version = "1.0.197", default-features = false, features = ["derive"] }
# serde_derive = "1.0"
# serde-json-core = "0.5"

# openssl = { version = "0.10.64", default-features = false, features = ["vendored"] }
# blake2 = { version = "0.10", default-features = false }
# sha2 = { version = "0.10", default-features = false }
# chacha20poly1305 = { version = "0.10", default-features = false }
#dryoc = { version = "0.5.0" }
##dryoc = { version = "0.4" }
#zeroize = { version = "1.6.0", default-features = false }
# multibase = { version = "0.9", default-features = false }
# multicodec = "0.1"
# multihash = { version = "0.19", default-features = false }
# base64 = { version = "0.22", default-features = false }
# base64-url = { version = "2.0", default-features = false }

# Explorer nouvelles libs pour remplacer x509-parser, openssl
# ed25519 = { version = "2.2.3", default-features = false }
# ed25519-dalek = { version = "2.1", default-features = false }
# x25519-dalek = { version = "2.0"}

# x509-parser = { version = "0.16.0" }
# x509-certificate = { version = "0.23.1", default-features = false }
# x509 = { version = "0.2.0", default-features = false }
# x509-cert = { version = "0.2.5", default-features = false }
# barebones-x509 = { version = "0.5.2", default-features = false, features = ["rustls"] }
# webpki = { version = "0.22.4", default-features = false }
# rustls-webpki = { version = "0.102.2", default-features = false }

chrono = { version = "0.4", default-features = false }

millegrilles_cryptographie = { path = "/home/mathieu/RustroverProjects/millegrilles_cryptographie" }
hex = { version = "0.4", default-features = false }

# HTTP
reqwless = { version = "0.11.0", features = ["embedded-tls"] }

[profile.release]
debug = 2
